--- a/cloud-config/src/main/resources/application.yml
+++ b/cloud-config/src/main/resources/application.yml
@@ -4,14 +4,15 @@ server:
 
 spring:
   zipkin:
-    base-url: ${SPRING_ZIPKIN_BASE_URL:http://localhost:9411/}
+    base-url: ${SPRING_ZIPKIN_BASE_URL:http://zipkin-service:9411/}
   application:
     name: CLOUD-CONFIG
   cloud:
     config:
       server:
         git:
-          uri: https://github.com/SelimHorri/cloud-config-server
+          uri: https://github.com/CrisDelCast/TALLER2INGESOFT.git
+          default-label: main
           clone-on-start: true
 
 resilience4j:
@@ -39,7 +40,7 @@ management:
   endpoint:
     health:
       show-details: always
-      
+
 eureka:
   client:
     service-url:
