--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 server:
   servlet:
     context-path: /user-service
@@ -40,10 +39,14 @@ eureka:
   client:
     service-url:
       defaultZone: http://service-discovery:8761/eureka/
+  instance: # <--- ¡AÑADE ESTA SECCIÓN!
+    hostname: user-service # <--- ¡ESTO ES CLAVE!
+    # prefer-ip-address: false # Opcional, pero asegúrate de que no esté 'true'
 
-
-
-
-
-
-
+logging:
+  level:
+    org.springframework.web.servlet.DispatcherServlet: DEBUG
+    org.springframework.web.method.HandlerMethod: DEBUG
+    com.example.tuapp.userservice: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
