Enable Maven debug mode in Jenkinsfile for troubleshooting

--- a/order-service/Jenkinsfile
+++ b/order-service/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
         stage('Build & Package') {
             steps {
                 dir('order-service') {
-                    sh 'mvn clean package -X > maven-build-debug.log 2>&1' // Añadir -X y redireccionar
+                    sh 'mvn clean package -X > maven-build-debug.log 2>&1' // ¡Asegúrate de que esta línea esté completa!
                 }
             }
         }
