Enable Maven debug mode in Jenkinsfile for troubleshooting

--- a/order-service/Jenkinsfile
+++ b/order-service/Jenkinsfile
@@ -98,7 +98,7 @@ pipeline {
     post {
         always {
             echo 'Cleaning up workspace...'
-            cleanWs()
+            //cleanWs()
         }
         success {
             echo 'Pipeline completed successfully!'
