Upgrade Spring Boot to 3.x and Spring Cloud to 2022.0.x for Java 21 compatibility

--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -14,10 +14,11 @@
 	<description>Spring Boot microservice</description>
 	<packaging>jar</packaging>
 	
+	
 	<properties>
-		<java.version>21</java.version> <spring-cloud.version>2020.0.4</spring-cloud.version>
-		<testcontainers.version>1.16.0</testcontainers.version>
-	</properties>
+    <java.version>21</java.version> <spring-cloud.version>2020.0.4</spring-cloud.version>
+    <testcontainers.version>1.16.0</testcontainers.version>
+</properties>
 	
 	<dependencies>
 	
@@ -80,8 +81,7 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
-				<type>pom</type>
+				<version>2020.0.4</version> <type>pom</type>
 				<scope>import</scope>
 			</dependency>
 			<dependency>
