--- a/.github/workflows/product-service-ci-cd.yml
+++ b/.github/workflows/product-service-ci-cd.yml
@@ -51,6 +51,12 @@ jobs:
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
+        
+    - name: Log in to Azure Container Registry
+      uses: azure/docker-login@v1
+      with:
+        login-server: ${{ env.ACR_NAME }}.azurecr.io
+
 
     # 6. BUILD & PUSH DOCKER IMAGE: 
     #    Construye la imagen y la sube a ACR.
