--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -1,13 +1,5 @@
-FROM maven:3.9.6-eclipse-temurin-17 AS builder
-WORKDIR /build
-COPY . .
-RUN mvn clean package -DskipTests
-
-FROM openjdk:11
-ARG PROJECT_VERSION=0.1.0
-ENV SPRING_PROFILES_ACTIVE=dev
-RUN mkdir -p /home/app
-WORKDIR /home/app
-COPY --from=builder /build/order-service/target/order-service-v${PROJECT_VERSION}.jar order-service.jar
+FROM openjdk:11-jre-slim
+WORKDIR /app
+COPY target/*.jar app.jar
 EXPOSE 8300
-ENTRYPOINT ["java", "-Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}", "-jar", "order-service.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
