--- a/.github/workflows/reusable-microservice-ci.yml
+++ b/.github/workflows/reusable-microservice-ci.yml
@@ -31,6 +31,8 @@ on:
         required: true
       SONAR_TOKEN:
         required: true
+      SONAR_PROJECT_KEY:
+        required: true
 
 jobs:
   build_and_deploy:
@@ -63,8 +65,10 @@ jobs:
         # Usamos el nombre del servicio como nombre del proyecto.
         args: >
           -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
-          -Dsonar.projectKey=${{ inputs.service_name }}
+          -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+          -Dsonar.projectName=${{ inputs.service_name }}
           -Dsonar.sources=${{ inputs.service_path }}
+          -Dsonar.projectBaseDir=.
 
     - name: Login to Azure
       uses: azure/login@v1
