--- a/.github/workflows/reusable-microservice-ci.yml
+++ b/.github/workflows/reusable-microservice-ci.yml
@@ -101,7 +101,8 @@ jobs:
         ignore-unfixed: true
         vuln-type: 'os,library'
         severity: 'CRITICAL,HIGH'
-        ignorefile: '.trivy/ignored-vulnerabilities.txt'
+        scanners: 'vuln'
+        trivyignores: '.trivy/vulnerabilities-to-ignore.txt'
 
     - name: Push Docker image if scan passed
       run: |
